@@ -5,6 +5,7 @@ export(.defaultScalarArguments)
 export(.extractScalarArguments)
 export(.showScalarArguments)
 export(AffinityParam)
+export(ClaraParam)
 export(DbscanParam)
 export(HclustParam)
 export(KNNGraphParam)
@@ -35,6 +36,7 @@ export(pairwiseModularity)
 export(pairwiseRand)
 exportClasses(AffinityParam)
 exportClasses(BlusterParam)
+exportClasses(ClaraParam)
 exportClasses(DbscanParam)
 exportClasses(FixedNumberParam)
 exportClasses(HclustParam)
@@ -72,6 +74,8 @@ importFrom(S4Vectors,I)
 importFrom(S4Vectors,List)
 importFrom(S4Vectors,coolcat)
 importFrom(S4Vectors,setValidity2)
+importFrom(cluster,clara)
+importFrom(cluster,pam)
 importFrom(igraph,"E<-")
 importFrom(igraph,E)
 importFrom(igraph,cluster_walktrap)
